# CK0445-prj-final

./: .gitignore  README.md
esp32-c3-01/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  blinkProjectFiles.txt  build-bin.sh  build.sh  podman-compose.yml  prd.md  tasks.md
esp32-c3-01/.cargo/: config.toml
esp32-c3-01/docs/: WIFI_CONFIG.md  tasks.md  vscode-setup.md
esp32-c3-01/src/: config.rs  main.rs  wifi.rs
