[package]
name = "esp32-c3-mqtt-counter"
version = "0.1.0"
authors = ["ESP32-C3 MQTT Project"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }