[package]
name = "esp32-c3-mqtt-counter"
version = "0.1.0"
authors = ["ESP32-C3 MQTT Project"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-wifi = { version = "0.11.0", features = ["esp32c3"] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-ipv4",
    "proto-ipv6",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }